WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316178
MIDI and AVI MIME signatures are never matched due to typo in MIMESniffer
https://bugs.webkit.org/show_bug.cgi?id=316178
Summary
MIDI and AVI MIME signatures are never matched due to typo in MIMESniffer
Chris Dumez
Reported
2026-06-02 23:04:38 PDT
MIDI and AVI MIME signatures are never matched due to typo in MIMESniffer
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-06-02 23:06:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66344
EWS
Comment 2
2026-06-03 15:08:45 PDT
Committed
314499@main
(aac4f9e2bfe2): <
https://commits.webkit.org/314499@main
> Reviewed commits have been landed. Closing PR #66344 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-03 15:09:12 PDT
<
rdar://problem/178661530
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug